# Evm_chain

./: Cargo.toml
.github/workflows/: _build-production-node-and-runtime.yml  _build-test-node-and-runtime.yml  _check-production-node-and-runtime.yml  _push-node-image-to-ecr.yml  _unit-tests-and-static-checks.yml  _update-node-image-infra.yml  deploy-to-devnet.yml  featurenet-create.yml  featurenet-update.yml  nightly-check-node-features-build.yml  nightly-e2e-logic-tests.yml  nightly-fe-e2e-tests.yml  nightly-integration-tests.yml  nightly-normal-session-e2e-tests.yml  on-main-or-release-branch-commit.yml  weekly-sync-from-snapshot-testnet-pruned.yml  weekly-sync-from-snapshot-testnet.yml
primitives/: Cargo.toml
primitives/src/: fake_runtime_api.rs
