[workspace]
resolver = "2"

members = [
    "aggregator",
    "baby-liminal-extension",
    "bin/node",
    "bin/runtime",
    "clique",
    "finality-aleph",
    "pallets/aleph",
    "pallets/elections",
    "pallets/feature-control",
    "pallets/committee-management",
    "pallets/operations",
    "pallets/support",
    "pallets/vk-storage",
    "primitives",
    "rate-limiter",
    "runtime-interfaces",
    "evm/frame/precompiles",
	"evm/frame/precompiles/macro",
	# "precompiles/tests-external",
]

exclude = [
    "aleph-client",
    "benches/payout-stakers",
    "bin/cliain",
    "bin/finalizer",
    "contracts/adder",
    "e2e-tests",
    "flooder",
    "scripts/synthetic-network/synthetic-link",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.package]
authors = ["Cardinal", "Aleph Zero Foundation"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/aleph-node"

[workspace.dependencies]
aleph-bft-crypto = { version = "0.9" }
aleph-bft-mock = { version = "0.14" }
aleph-bft-rmc = { version = "0.13" }
aleph-bft-types = { version = "0.13" }
async-trait = { version = "0.1" }
bytes = { version = "1.6" }
derive_more = { version = "0.99" }
env_logger = { version = "0.10" }
futures = { version = "0.3" }
futures-timer = { version = "3.0" }
hash-db = { version = "0.16", default-features = false }
hex = { version = "0.4",default-features = false }
hex-literal = { version = "0.3" }
ink = { version = "5.0.0-rc", default-features = false }
ip_network = { version = "0.4" }
jsonrpsee = { version = "0.16.3" }
libp2p = { version = "0.51" }
log = { version = "0.4", default-features = false }
lru = { version = "0.10" }
parity-scale-codec = { version = "3.0", default-features = false }
parking_lot = { version = "0.12" }
paste = { version = "1.0" }
rand = { version = "0.8.5", default-features = false }
scale-info = { version = "2.11", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
smallvec = { version = "1", default-features = false }
static_assertions = { version = "1.1" }
thiserror = { version = "1.0" }
tiny-bip39 = { version = "1.0" }
tokio = { version = "1.37" }
rand_pcg = { version = "0.3.1", default-features = false }

frame-benchmarking = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
frame-election-provider-support = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
frame-executive = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
frame-support = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
frame-system = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
frame-try-runtime = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }

pallet-aura = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-authorship = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-balances = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-contracts = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-identity = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-multisig = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-nomination-pools = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-scheduler = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-session = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-staking = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-staking-runtime-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-sudo = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-timestamp = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-treasury = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-utility = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-vesting = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
pallet-proxy = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }

sc-basic-authorship = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-block-builder = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-chain-spec = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-cli = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-client-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-consensus = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-consensus-aura = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-consensus-slots = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-executor = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-keystore = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-network = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-network-common = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-network-sync = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-rpc = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-rpc-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-service = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-telemetry = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-transaction-pool = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-transaction-pool-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
sc-utils = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }

sp-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-application-crypto = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-arithmetic = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-blockchain = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0", default-features = false }
sp-core-hashing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0", default-features = false }

sp-block-builder = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-consensus = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-consensus-slots = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-core = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-genesis-builder = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-inherents = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-io = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-keystore = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-offchain = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-session = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-staking = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-state-machine = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-std = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-timestamp = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-trie = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }
sp-version = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0", default-features = false }

substrate-build-script-utils = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
substrate-frame-rpc-system = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
substrate-prometheus-endpoint = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
substrate-test-runtime-client = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
substrate-test-runtime = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
substrate-test-client = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }
substrate-wasm-builder = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }

try-runtime-cli = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.5.0" }

halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "aleph", default-features = false }

# Local crates

aleph-runtime = { path = "bin/runtime" }
aleph-runtime-interfaces = { path = "runtime-interfaces", default-features = false }
baby-liminal-extension = { path = "baby-liminal-extension", default-features = false }
finality-aleph = { path = "finality-aleph" }
network-clique = { path = "clique" }
impl-trait-for-tuples = "0.2.1"
similar-asserts = "1.1.0"
rate-limiter = { path = "rate-limiter" }
pallet-aleph = { path = "pallets/aleph", default-features = false }
pallet-committee-management = { path = "pallets/committee-management", default-features = false }
pallet-elections = { path = "pallets/elections", default-features = false }
pallet-feature-control = { path = "pallets/feature-control", default-features = false }
pallet-operations = { path = "pallets/operations", default-features = false }
pallets-support = { path = "pallets/support", default-features = false }
pallet-vk-storage = { path = "pallets/vk-storage", default-features = false }
primitives = { path = "primitives", default-features = false }

ethereum = { version = "0.15.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
environmental = { version = "1.1.4", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
evm = { version = "0.41.1", default-features = false }
# Frontier Client
fc-api = { version = "1.0.0-dev", path = "evm/client/api" }
fc-cli = { version = "1.0.0-dev", path = "evm/client/cli", default-features = false }
fc-consensus = { version = "2.0.0-dev", path = "evm/client/consensus" }
fc-db = { version = "2.0.0-dev", path = "evm/client/db", default-features = false }
fc-mapping-sync = { version = "2.0.0-dev", path = "evm/client/mapping-sync", default-features = false }
fc-rpc = { version = "2.0.0-dev", path = "evm/client/rpc", default-features = false }
fc-rpc-core = { version = "1.1.0-dev", path = "evm/client/rpc-core" }
fc-storage = { version = "1.0.0-dev", path = "evm/client/storage" }
# Frontier Primitive
fp-account = { version = "1.0.0-dev", path = "evm/primitives/account", default-features = false }
fp-consensus = { version = "2.0.0-dev", path = "evm/primitives/consensus", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
impl-serde = { version = "0.4.0", default-features = false }
rlp = { version = "0.5.2", default-features = false }
libsecp256k1 = { version = "0.7.1", default-features = false }
fp-dynamic-fee = { version = "1.0.0", path = "evm/primitives/dynamic-fee", default-features = false }
fp-ethereum = { version = "1.0.0-dev", path = "evm/primitives/ethereum", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "evm/primitives/evm", default-features = false }
fp-rpc = { version = "3.0.0-dev", path = "evm/primitives/rpc", default-features = false }
fp-self-contained = { version = "1.0.0-dev", path = "evm/primitives/self-contained", default-features = false }
fp-storage = { version = "2.0.0", path = "evm/primitives/storage", default-features = false }
# Frontier FRAME
pallet-base-fee = { version = "1.0.0", path = "evm/frame/base-fee", default-features = false }
pallet-dynamic-fee = { version = "4.0.0-dev", path = "evm/frame/dynamic-fee", default-features = false }
pallet-ethereum = { version = "4.0.0-dev", path = "evm/frame/ethereum", default-features = false }
pallet-evm = { version = "6.0.0-dev", path = "evm/frame/evm", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", path = "evm/frame/evm-chain-id", default-features = false }
pallet-evm-precompile-modexp = { version = "2.0.0-dev", path = "evm/frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", path = "evm/frame/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "evm/frame/evm/precompile/simple", default-features = false }
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "evm/frame/evm/test-vector-support" }
pallet-hotfix-sufficients = { version = "1.0.0", path = "evm/frame/hotfix-sufficients", default-features = false }
precompile-utils = { path = "evm/frame/precompiles", default-features = false }
